Update lint and coverage commands

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "sift": "*"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "istanbul": "*",
+    "jshint": "*"
   },
   "engines": {
     "node": ">= 0.10.0"
