--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "marked": "*",
-    "sift": "*"
+    "sift": ">= 1.0.0"
   },
   "devDependencies": {
     "mocha": "*",
